force-app/main/default/objects/Opportunity/fields/Jpetto__Project__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Jpetto__Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>