force-app/main/default/objects/Opportunity/fields/nc_connect__Sent_to_namecoach__c.field-meta.xml
<CustomField>
    <fullName>nc_connect__Sent_to_namecoach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced Flag</label>
    <type>Checkbox</type>
</CustomField>