force-app/main/default/objects/Opportunity/fields/PhoneIQSF__Dials_and_Opps__c.field-meta.xml
<CustomField>
    <fullName>PhoneIQSF__Dials_and_Opps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Obj with the opp info</description>
    <label>Dials and Opps</label>
    <referenceTo>PhoneIQSF__Dials_and_Opps__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>