force-app/main/default/objects/Opportunity/fields/PhoneIQSF__Prior_Rev_Amount__c.field-meta.xml
<CustomField>
    <fullName>PhoneIQSF__Prior_Rev_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value of field &apos;Amount&apos; before each save</description>
    <label>Prior Rev Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>