force-app/main/default/objects/Opportunity/recordTypes/Collaboration.recordType-meta.xml
<RecordType>
    <fullName>Collaboration</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <label>Collaboration</label>
</RecordType>