force-app/main/default/objects/Opportunity/recordTypes/Partnership.recordType-meta.xml
<RecordType>
    <fullName>Partnership</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <label>Partnership</label>
</RecordType>