force-app/main/default/objects/Opportunity/recordTypes/Retainer.recordType-meta.xml
<RecordType>
    <fullName>Retainer</fullName>
    <active>true</active>
    <businessProcess>Sales Process</businessProcess>
    <label>Retainer</label>
</RecordType>